cluster/kubernetes/apps/forgejo/forgejo/ingress/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: foegejo
  namespace: forgejo
  annotations:
    gatus.home-operations.com/enabled: 'true'
    gatus.home-operations.com/endpoint: |
      name: forgejo
spec:
  hostnames:
    - git.cjsolsen.com
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: forgejo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: forgejo-anubis
          port: 8080
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      timeouts:
        request: 300s
