cluster/kubernetes/apps/forgejo/forgejo/ingress/tcproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/tcproute_v1alpha2.json
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: foegejo-tcp
  namespace: forgejo
spec:
  parentRefs:
    - name: external-gateway
      namespace: network
      sectionName: forgejo-tcp
  rules:
    - backendRefs:
      - name: forgejo-ssh
        port: 2222
